[package]
name = "goat"
version = "0.9.2-alpha.0"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
description = "better sleep"
license = "WTFPL"
categories = ["command-line-utilities"]
repository = "https://github.com/brocode/goat"
readme = "README.org"
keywords = ["cli", "automation", "developer-tools" ]
edition = "2018"

[dependencies]
tui="0.6"
termion="1"
clap = "2"
atty = "0.2"
