[package]
name = "goat"
version = "0.10.1-alpha.0"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
description = "better sleep"
license = "WTFPL"
categories = ["command-line-utilities"]
repository = "https://github.com/brocode/goat"
readme = "README.org"
keywords = ["cli", "automation", "developer-tools" ]
edition = "2018"

[dependencies]
tui="0.16"
termion="1"
atty = "0.2"

[dependencies.clap]
version = "3"
features = ["cargo"]
