[package]
name = "goat"
version = "0.10.1-alpha.0"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
description = "better sleep"
license = "WTFPL"
categories = ["command-line-utilities"]
repository = "https://github.com/brocode/goat"
readme = "README.org"
keywords = ["cli", "automation", "developer-tools" ]
edition = "2021"

[dependencies]
termion="2"
atty = "0.2"

[dependencies.tui]
default-features = false
features = ["termion"]
version="0.19"

[dependencies.clap]
version = "4"
features = ["cargo"]
